--- a/index.html
+++ b/index.html
@@ -15,34 +15,34 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 		/>
-		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="./css/main.min.css" />
 	</head>
 	<body>
 		<header class="header">
-			<div class="container main-nav">
+			<div class="container header__nav">
 				<!--Шапка-->
-				<a class="logo" lang="en" href="/">
-					<span class="logo-accent">Web</span>Studio
+				<a class="logo header__logo" lang="en" href="/">
+					<span class="logo--blue">Web</span>Studio
 				</a>
 
 				<ul class="site-nav list">
-					<li class="item"><a href="./index.html" class="link current">Студия</a></li>
-					<li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-					<li class="item"><a href="" class="link">Контакты</a></li>
+					<li class="site-nav__item"><a href="./index.html" class="site-nav__link current">Студия</a></li>
+					<li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфолио</a></li>
+					<li class="site-nav__item"><a href="" class="link">Контакты</a></li>
 				</ul>
 
-				<ul class="contacts-list list">
-					<li class="item">
-						<a class="link" href="mailto:info@devstudio.com">
-							<svg class="contacts-list-icon" width="16" height="12">
+				<ul class="contacts list">
+					<li class="contacts__item">
+						<a class="contacts__link" href="mailto:info@devstudio.com">
+							<svg class="contacts__icon" width="16" height="12">
 								<use href="./images/icons.svg#envelope"></use>
 							</svg>
 							info@devstudio.com
 						</a>
 					</li>
-					<li class="item">
-						<a class="link" href="tel:+380961111111">
-							<svg class="contacts-list-icon" width="10" height="16">
+					<li class="contacts__item">
+						<a class="contacts__link" href="tel:+380961111111">
+							<svg class="contacts__icon" width="10" height="16">
 								<use href="./images/icons.svg#smartphone"></use>
 							</svg>
 							+38 096 111 11 11
@@ -56,9 +56,9 @@
 		<main>
 			<!--Герой-->
 			<section class="hero">
-				<div class="container centred">
-					<h1 class="hero-titel">Эффективные решения для вашего бизнеса</h1>
-					<button class="hero-button" type="button" data-modal-open>Заказать услугу</button>
+				<div class="container hero__container">
+					<h1 class="title">Эффективные решения для вашего бизнеса</h1>
+					<button class="button hero__button" type="button" data-modal-open>Заказать услугу</button>
 				</div>
 			</section>
 
@@ -67,9 +67,9 @@
 					<!--Прихований заголовок-->
 					<h2 class="visually-hidden">Преимущества компании</h2>
 					<ul class="benefits-list list">
-						<li class="item">
-							<div class="icon-bg">
-								<svg class="benefits-list-icon" width="70" height="70">
+						<li class="benefits-list__item">
+							<div class="benefits-list__icon-bg">
+								<svg class="benefits-list__icon" width="70" height="70">
 									<use href="./images/icons.svg#antenna"></use>
 								</svg>
 							</div>
