--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 		/>
 		<link rel="stylesheet" href="./css/main.min.css" />
 	</head>
-	<body>
+	<body class="body">
 		<header class="header">
-			<div class="container header__nav">
+			<div class="container nav">
 				<!--Шапка-->
 				<a class="logo header__logo" lang="en" href="/">
 					<span class="logo--blue">Web</span>Studio
 				</a>
 
-				<ul class="site-nav list">
-					<li class="site-nav__item"><a href="./index.html" class="site-nav__link current">Студия</a></li>
+				<ul class="site-nav">
+					<li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a></li>
 					<li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфолио</a></li>
-					<li class="site-nav__item"><a href="" class="link">Контакты</a></li>
+					<li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
 				</ul>
 
-				<ul class="contacts list">
+				<ul class="contacts">
 					<li class="contacts__item">
 						<a class="contacts__link" href="mailto:info@devstudio.com">
 							<svg class="contacts__icon" width="16" height="12">
