--- a/index.html
+++ b/index.html
@@ -57,81 +57,80 @@
 			<!--Герой-->
 			<section class="hero">
 				<div class="container hero__container">
-					<h1 class="title">Эффективные решения для вашего бизнеса</h1>
-					<button class="button hero__button" type="button" data-modal-open>Заказать услугу</button>
+					<h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+					<button class="button" type="button" data-modal-open>Заказать услугу</button>
 				</div>
 			</section>
-
-			<section class="benefits section">
-				<div class="container">
-					<!--Прихований заголовок-->
+			<!-- Секція переваги -->
+			<section class="section">
+				<div class="container">					
 					<h2 class="visually-hidden">Преимущества компании</h2>
-					<ul class="benefits-list list">
+					<ul class="benefits-list">
 						<li class="benefits-list__item">
 							<div class="benefits-list__icon-bg">
 								<svg class="benefits-list__icon" width="70" height="70">
 									<use href="./images/icons.svg#antenna"></use>
 								</svg>
 							</div>
-							<h3 class="list-titel">Внимание к деталям</h3>
-							<p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+							<h3 class="benefits-list__titel">Внимание к деталям</h3>
+							<p class="benefits-list__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 						</li>
-						<li class="item">
-							<div class="icon-bg">
-								<svg class="benefits-list-icon" width="70" height="70">
+						<li class="benefits-list__item">
+							<div class="benefits-list__icon-bg">
+								<svg class="benefits-list__icon" width="70" height="70">
 									<use href="./images/icons.svg#clock"></use>
 								</svg>
 							</div>
-							<h3 class="list-titel">Пунктуальность</h3>
-							<p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+							<h3 class="benefits-list__titel">Пунктуальность</h3>
+							<p class="benefits-list__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 						</li>
-						<li class="item">
-							<div class="icon-bg">
-								<svg class="benefits-list-icon" width="70" height="70">
+						<li class="benefits-list__item">
+							<div class="benefits-list__icon-bg">
+								<svg class="benefits-list__icon" width="70" height="70">
 									<use href="./images/icons.svg#diagram"></use>
 								</svg>
 							</div>
-							<h3 class="list-titel">Планирование</h3>
-							<p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+							<h3 class="benefits-list__titel">Планирование</h3>
+							<p class="benefits-list__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 						</li>
-						<li class="item">
-							<div class="icon-bg">
-								<svg class="benefits-list-icon" width="70" height="70">
+						<li class="benefits-list__item">
+							<div class="benefits-list__icon-bg">
+								<svg class="benefits-list__icon" width="70" height="70">
 									<use href="./images/icons.svg#astronaut"></use>
 								</svg>
 							</div>
-							<h3 class="list-titel">Современные технологии</h3>
-							<p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+							<h3 class="benefits-list__titel">Современные технологии</h3>
+							<p class="benefits-list__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 						</li>
 					</ul>
 				</div>
 			</section>
 
-			<section class="do section">
+			<section class="do">
 				<div class="container">
 					<h2 class="section-titel">Чем мы занимаемся</h2>
-					<ul class="do-list list">
-						<li class="item">
+					<ul class="do-list">
+						<li class="do-list__item">
 							<img class="img" src="./images/computer.jpg" alt="Человек верстает на компьютере" width="370" />
-							<p class="label">Десктопные приложения</p>
+							<p class="do-list__label">Десктопные приложения</p>
 						</li>
-						<li class="item">
+						<li class="do-list__item">
 							<img
 								class="img"
 								src="./images/laptop.jpg"
 								alt="Человек работает на ноутбуке. Адаптивная вёрстка "
 								width="370"
 							/>
-							<p class="label">Мобильные приложения</p>
+							<p class="do-list__label">Мобильные приложения</p>
 						</li>
-						<li class="item">
+						<li class="do-list__item">
 							<img
 								class="img"
 								src="./images/tablet.jpg"
 								alt="Человек работает с палитрой цветов на планшете"
 								width="370"
 							/>
-							<p class="label">Дизайнерские решения</p>
+							<p class="do-list__label">Дизайнерские решения</p>
 						</li>
 					</ul>
 				</div>
