--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					</ul>
 				</div>
 			</section>
-
+			<!-- Cеккція послуги -->
 			<section class="do">
 				<div class="container">
 					<h2 class="section-titel">Чем мы занимаемся</h2>
@@ -135,41 +135,41 @@
 					</ul>
 				</div>
 			</section>
-
+			<!-- Секція Команда -->
 			<section class="section team">
 				<div class="container">
 					<h2 class="section-titel">Наша команда</h2>
-					<ul class="team-list list">
-						<li class="team-list-item">
+					<ul class="team-list">
+						<li class="team-card">
 							<img class="img" src="./images/photo-igor-d.jpg" alt="Фото Игорь Демяненко" width="270" />
-							<div class="content">
-								<h3 class="list-titel">Игорь Демьяненко</h3>
-								<p class="text" lang="en">Product Designer</p>
-								<ul class="social-list list">
-									<li class="social-list-item">
-										<a class="link" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+							<div class="team-card__content">
+								<h3 class="team-card__titel">Игорь Демьяненко</h3>
+								<p class="team-card__text" lang="en">Product Designer</p>
+								<ul class="social-list">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#linkedin"></use>
 											</svg>
 										</a>
@@ -177,36 +177,36 @@
 								</ul>
 							</div>
 						</li>
-						<li class="team-list-item">
+						<li class="team-card">
 							<img class="img" src="./images/photo-olga-r.jpg" alt="Фото Ольга Репина" width="270" />
-							<div class="content">
-								<h3 class="list-titel">Ольга Репина</h3>
-								<p class="text" lang="en">Frontend Developer</p>
-								<ul class="social-list list">
-									<li class="social-list-item">
-										<a class="link" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+							<div class="team-card__content">
+								<h3 class="team-card__titel">Ольга Репина</h3>
+								<p class="team-card__text" lang="en">Frontend Developer</p>
+								<ul class="social-list">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#linkedin"></use>
 											</svg>
 										</a>
@@ -214,36 +214,36 @@
 								</ul>
 							</div>
 						</li>
-						<li class="team-list-item">
+						<li class="team-card">
 							<img class="img" src="./images/photo-nick-t.jpg" alt="Фото Николай Тарасов" width="270" />
-							<div class="content">
-								<h3 class="list-titel">Николай Тарасов</h3>
-								<p class="text" lang="en">Marketing</p>
-								<ul class="social-list list">
-									<li class="social-list-item">
-										<a class="link" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+							<div class="team-card__content">
+								<h3 class="team-card__titel">Николай Тарасов</h3>
+								<p class="team-card__text" lang="en">Marketing</p>
+								<ul class="social-list">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#linkedin"></use>
 											</svg>
 										</a>
@@ -251,36 +251,36 @@
 								</ul>
 							</div>
 						</li>
-						<li class="team-list-item">
+						<li class="team-card">
 							<img class="img" src="./images/photo-mikha-y.jpg" alt="Фото Михаил Ермаков" width="270" />
-							<div class="content">
-								<h3 class="list-titel">Михаил Ермаков</h3>
-								<p class="text" lang="en">UI Designer</p>
-								<ul class="social-list list">
-									<li class="social-list-item">
-										<a class="link" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+							<div class="team-card__content">
+								<h3 class="team-card__titel">Михаил Ермаков</h3>
+								<p class="team-card__text" lang="en">UI Designer</p>
+								<ul class="social-list">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="social-list-item">
-										<a class="link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
-											<svg class="social-list-icon" width="20" height="20">
+									<li class="social-list__item">
+										<a class="social-link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
+											<svg class="social-link__icon" width="20" height="20">
 												<use href="./images/icons.svg#linkedin"></use>
 											</svg>
 										</a>
@@ -291,48 +291,49 @@
 					</ul>
 				</div>
 			</section>
-			<section class="client">
+			<!-- Секція Клієнти -->
+			<section class="section">
 				<div class="container">
 					<h2 class="section-titel">Постоянные клиенты</h2>
-					<ul class="client-list list">
-						<li class="client-list-item">
-							<a class="link" href="" target="_blank" rel="noreferrer noopener">
-								<svg class="client-list-icon" width="41" height="47">
+					<ul class="client-list">
+						<li class="client-list__item">
+							<a class="client-link" href="" target="_blank" rel="noreferrer noopener">
+								<svg class="client-link__icon" width="41" height="47">
 									<use href="./images/icons.svg#company1"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="client-list-item">
-							<a class="link" href="" target="_blank" rel="noreferrer noopener">
-								<svg class="client-list-icon" width="40" height="52">
+						<li class="client-list__item">
+							<a class="client-link" href="" target="_blank" rel="noreferrer noopener">
+								<svg class="client-link__icon" width="40" height="52">
 									<use href="./images/icons.svg#company2"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="client-list-item">
-							<a class="link" href="" target="_blank" rel="noreferrer noopener">
-								<svg class="client-list-icon" width="43" height="41">
+						<li class="client-list__item">
+							<a class="client-link" href="" target="_blank" rel="noreferrer noopener">
+								<svg class="client-link__icon" width="43" height="41">
 									<use href="./images/icons.svg#company3"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="client-list-item">
-							<a class="link" href="" target="_blank" rel="noreferrer noopener">
-								<svg class="client-list-icon" width="84" height="41">
+						<li class="client-list__item">
+							<a class="client-link" href="" target="_blank" rel="noreferrer noopener">
+								<svg class="client-link__icon" width="84" height="41">
 									<use href="./images/icons.svg#company4"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="client-list-item">
-							<a class="link" href="" target="_blank" rel="noreferrer noopener">
-								<svg class="client-list-icon" width="63" height="45">
+						<li class="client-list__item">
+							<a class="client-link" href="" target="_blank" rel="noreferrer noopener">
+								<svg class="client-link__icon" width="63" height="45">
 									<use href="./images/icons.svg#company5"></use>
 								</svg>
 							</a>
 						</li>
-						<li class="client-list-item">
-							<a class="link" href="" target="_blank" rel="noreferrer noopener">
-								<svg class="client-list-icon" width="94" height="45">
+						<li class="client-list__item">
+							<a class="client-link" href="" target="_blank" rel="noreferrer noopener">
+								<svg class="client-link__icon" width="94" height="45">
 									<use href="./images/icons.svg#company6"></use>
 								</svg>
 							</a>
@@ -345,20 +346,21 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="container">
-				<div class="footer-content">
-					<div class="address">
+				<div class="footer__content">
+					<div>
 						<a class="logo" lang="en" href="./index.html">
-							<span class="logo-accent">Web</span>Studio
+							<span class="logo--blue">Web</span>Studio
 						</a>
 						<address>
-							<ul class="address-list list">
-								<li class="addres-item">
-									<a class="address-link location" href="">г. Киев, пр-т Леси Украинки, 26</a>
+							<ul class="address-list">
+								<li class="address-list__item">
+									<a class="address-list__link address-list__link--white" href="">г. Киев, пр-т Леси Украинки, 26</a>
 								</li>
-								<li class="addres-item">
-									<a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+								<li class="address-list__item">
+									<a class="address-list__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 								</li>
-								<li class="addres-item"><a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+								<li class="address-list__item">
+									<a class="address-list__link" href="tel:+380961111111">+38 096 111 11 11</a></li>
 							</ul>
 						</address>
 					</div>
