--- a/index.html
+++ b/index.html
@@ -364,47 +364,47 @@
 							</ul>
 						</address>
 					</div>
-					<div class="footer-social">
-						<p class="list-titel">Присоединяйтесь</p>
-						<ul class="footer-social-list list">
-							<li class="social-list-item">
-								<a class="link" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-list-icon" width="20" height="20">
+					<div class="footer__social">
+						<p class="footer__titel">Присоединяйтесь</p>
+						<ul class="social-list">
+							<li class="social-list__item">
+								<a class="social-link social-link--bcg" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
+									<svg class="social-link__icon" width="20" height="20">
 										<use href="./images/icons.svg#instagram"></use>
 									</svg>
 								</a>
 							</li>
-							<li class="social-list-item">
-								<a class="link" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-list-icon" width="20" height="20">
+							<li class="social-list__item">
+								<a class="social-link social-link--bcg" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
+									<svg class="social-link__icon" width="20" height="20">
 										<use href="./images/icons.svg#twitter"></use>
 									</svg>
 								</a>
 							</li>
-							<li class="social-list-item">
-								<a class="link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-list-icon" width="20" height="20">
+							<li class="social-list__item">
+								<a class="social-link social-link--bcg" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
+									<svg class="social-link__icon" width="20" height="20">
 										<use href="./images/icons.svg#facebook"></use>
 									</svg>
 								</a>
 							</li>
-							<li class="social-list-item">
-								<a class="link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-list-icon" width="20" height="20">
+							<li class="social-list__item">
+								<a class="social-link social-link--bcg" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
+									<svg class="social-link__icon" width="20" height="20">
 										<use href="./images/icons.svg#linkedin"></use>
 									</svg>
 								</a>
 							</li>
 						</ul>
 					</div>
-					<div class="form-footer">
-						<p class="footer-form-titel">Подпишитесь на рассылку</p>
-						<form name="mailing-form" autocomplete="on">
-							<label for="label-footer" class="label-footer visually-hidden">Подпишитесь на рассылку</label>
-							<input class="input-footer" type="email" name="email" placeholder="E-mail" id="label-footer" />
-							<button class="btn-footer" type="submit">
+					<div class="footer__form">
+						<p class="footer__titel">Подпишитесь на рассылку</p>
+						<form class="form" name="mailing-form" autocomplete="on">
+							<label for="mailing-label" class="visually-hidden">Подпишитесь на рассылку</label>
+							<input class="form__input" type="email" name="email" placeholder="E-mail" id="mailing-form" />
+							<button class="button form__button" type="submit">
 								Подписаться
-								<svg class="footer-form-icon" width="20" height="20">
+								<svg class="form__button--icon" width="20" height="20">
 									<use href="./images/icons.svg#send"></use>
 								</svg>
 							</button>
@@ -413,10 +413,10 @@
 				</div>
 			</div>
 		</footer>
-		<div class="backdrop is-hidden" data-modal>
+		<div class="backdrop backdrop--hidden" data-modal>
 			<div class="modal">
 				<button type="button" class="close-btn" data-modal-close>
-					<svg class="modal-close-icon" width="18" height="18">
+					<svg class="close-btn__icon" width="18" height="18">
 						<use href="./images/icons.svg#close"></use>
 					</svg>
 				</button>
