--- a/portfolio.html
+++ b/portfolio.html
@@ -15,34 +15,35 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 		/>
-		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="./css/main.min.css" />
 	</head>
 	<body>
 		<header class="header">
-			<div class="container main-nav">
+			<div class="container nav">
 				<!--Шапка-->
-				<a class="logo" lang="en" href="./index.html">
-					<span class="logo-accent">Web</span>Studio
+				<a class="logo header__logo" lang="en" href="/index.html">
+					<span class="logo--blue">Web</span>Studio
 				</a>
-
-				<ul class="site-nav list">
-					<li class="item"><a href="./index.html" class="link">Студия</a></li>
-					<li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-					<li class="item"><a href="" class="link">Контакты</a></li>
+		
+				<ul class="site-nav">
+					<li class="site-nav__item"><a href="./index.html" class="site-nav__link">Студия</a>
+					</li>
+					<li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфолио</a></li>
+					<li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
 				</ul>
-
-				<ul class="contacts-list list">
-					<li class="item">
-						<a class="link" href="mailto:info@devstudio.com">
-							<svg class="contacts-list-icon" width="16" height="12">
+		
+				<ul class="contacts">
+					<li class="contacts__item">
+						<a class="contacts__link" href="mailto:info@devstudio.com">
+							<svg class="contacts__icon" width="16" height="12">
 								<use href="./images/icons.svg#envelope"></use>
 							</svg>
 							info@devstudio.com
 						</a>
 					</li>
-					<li class="item">
-						<a class="link" href="tel:+380961111111">
-							<svg class="contacts-list-icon" width="10" height="16">
+					<li class="contacts__item">
+						<a class="contacts__link" href="tel:+380961111111">
+							<svg class="contacts__icon" width="10" height="16">
 								<use href="./images/icons.svg#smartphone"></use>
 							</svg>
 							+38 096 111 11 11
@@ -58,12 +59,12 @@
 				<div class="container">
 					<h1 class="visually-hidden">Примеры работ</h1>
 
-					<ul class="filter-list list">
-						<li class="item"><button class="button" type="button">Все</button></li>
-						<li class="item"><button class="button" type="button">Веб-сайты</button></li>
-						<li class="item"><button class="button" type="button">Приложения</button></li>
-						<li class="item"><button class="button" type="button">Дизайн</button></li>
-						<li class="item"><button class="button" type="button">Маркетинг</button></li>
+					<ul class="filter">
+						<li class="filter__item"><button class="filter__button" type="button">Все</button></li>
+						<li class="filter__item"><button class="filter__button" type="button">Веб-сайты</button></li>
+						<li class="filter__item"><button class="filter__button" type="button">Приложения</button></li>
+						<li class="filter__item"><button class="filter__button" type="button">Дизайн</button></li>
+						<li class="filter__item"><button class="filter__button" type="button">Маркетинг</button></li>
 					</ul>
 
 					<ul class="work list">
@@ -247,66 +248,76 @@
 
 		<footer class="footer">
 			<div class="container">
-				<div class="footer-content">
-					<div class="address">
+				<div class="footer__content">
+					<div>
 						<a class="logo" lang="en" href="./index.html">
-							<span class="logo-accent">Web</span>Studio
+							<span class="logo--blue">Web</span>Studio
 						</a>
 						<address>
-							<ul class="address-list list">
-								<li class="addres-item">
-									<a class="location address-link" href="">г. Киев, пр-т Леси Украинки, 26</a>
+							<ul class="address-list">
+								<li class="address-list__item">
+									<a class="address-list__link address-list__link--white" href="">г. Киев, пр-т Леси Украинки,
+										26</a>
 								</li>
-								<li class="addres-item">
-									<a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+								<li class="address-list__item">
+									<a class="address-list__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
 								</li>
-								<li class="addres-item"><a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+								<li class="address-list__item">
+									<a class="address-list__link" href="tel:+380961111111">+38 096 111 11 11</a>
+								</li>
 							</ul>
 						</address>
 					</div>
-					<div class="footer-social">
-						<p class="list-titel">Присоединяйтесь</p>
-						<ul class="footer-social-list list">
-							<li class="social-list-item">
-								<a class="link" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-list-icon" width="20" height="20">
+					<div class="footer__social">
+						<p class="footer__titel">Присоединяйтесь</p>
+						<ul class="social-list">
+							<li class="social-list__item">
+								<a class="social-link social-link--bcg" href="https://www.instagram.com/" target="_blank"
+									rel="noreferrer noopener">
+									<svg class="social-link__icon" width="20" height="20">
 										<use href="./images/icons.svg#instagram"></use>
 									</svg>
 								</a>
 							</li>
-							<li class="social-list-item">
-								<a class="link" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-list-icon" width="20" height="20">
+							<li class="social-list__item">
+								<a class="social-link social-link--bcg" href="https://twitter.com/" target="_blank"
+									rel="noreferrer noopener">
+									<svg class="social-link__icon" width="20" height="20">
 										<use href="./images/icons.svg#twitter"></use>
 									</svg>
 								</a>
 							</li>
-							<li class="social-list-item">
-								<a class="link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-list-icon" width="20" height="20">
+							<li class="social-list__item">
+								<a class="social-link social-link--bcg" href="https://www.facebook.com/" target="_blank"
+									rel="noreferrer noopener">
+									<svg class="social-link__icon" width="20" height="20">
 										<use href="./images/icons.svg#facebook"></use>
 									</svg>
 								</a>
 							</li>
-							<li class="social-list-item">
-								<a class="link" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-list-icon" width="20" height="20">
+							<li class="social-list__item">
+								<a class="social-link social-link--bcg" href="https://www.linkedin.com/" target="_blank"
+									rel="noreferrer noopener">
+									<svg class="social-link__icon" width="20" height="20">
 										<use href="./images/icons.svg#linkedin"></use>
 									</svg>
 								</a>
 							</li>
 						</ul>
 					</div>
-					<form class="form-footer" name="mailing-form" autocomplete="on">
-						<label class="label-footer">Подпишитесь на рассылку</label>
-						<input class="input-footer" type="email" name="email" placeholder="E-mail" id="label-footer" />
-						<button class="btn-footer" type="submit">
-							Подписаться
-							<svg class="footer-form-icon" width="24" height="24">
-								<use href="./images/icons.svg#send"></use>
-							</svg>
-						</button>
-					</form>
+					<div class="footer__form">
+						<p class="footer__titel">Подпишитесь на рассылку</p>
+						<form class="form" name="mailing-form" autocomplete="on">
+							<label for="mailing-label" class="visually-hidden">Подпишитесь на рассылку</label>
+							<input class="form__input" type="email" name="email" placeholder="E-mail" id="mailing-form" />
+							<button class="button form__button" type="submit">
+								Подписаться
+								<svg class="form__button--icon" width="20" height="20">
+									<use href="./images/icons.svg#send"></use>
+								</svg>
+							</button>
+						</form>
+					</div>
 				</div>
 			</div>
 		</footer>
