sass BEM finish

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,177 +67,177 @@
 						<li class="filter__item"><button class="filter__button" type="button">Маркетинг</button></li>
 					</ul>
 
-					<ul class="work list">
-						<li class="item">
-							<a class="work-link" href="">
-								<div class="box">
+					<ul class="work">
+						<li class="work-card">
+							<a class="work-card__link" href="">
+								<div class="work-card__box">
 									<img
 										class="img"
 										src="./images/tehnohryak.jpg"
 										alt="ноутбук с изображением анкет сотрудников на экране"
 										width="370"
 									/>
-									<p class="overlay text-overlay">
+									<p class="work-card__overlay">
 										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
 										посетителю получить исчерпывающие сведения о компании или частном лице.
 									</p>
 								</div>
 								<div class="border">
-									<h2 class="list-titel">Технокряк</h2>
-									<p class="text">Веб-сайт</p>
+									<h2 class="work-card__titel">Технокряк</h2>
+									<p class="work-card__text">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
-						<li class="item">
-							<a class="work-link" href="">
-								<div class="box">
+						<li class="work-card">
+							<a class="work-card__link" href="">
+								<div class="work-card__box">
 									<img
 										class="img"
 										src="./images/basketball.jpg"
 										alt="плакат с изображением баскетоболистов"
 										width="370"
 									/>
-									<p class="overlay">
+									<p class="work-card__overlay">
 										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
 										посетителю получить исчерпывающие сведения о компании или частном лице.
 									</p>
 								</div>
 								<div class="border">
-									<h2 class="list-titel">
+									<h2 class="work-card__titel">
 										Постер
 										<span lang="en">New Orlean vs Golden Star</span>
 									</h2>
-									<p class="text">Дизайн</p>
+									<p class="work-card__text">Дизайн</p>
 								</div>
 							</a>
 						</li>
-						<li class="item">
-							<a class="work-link" href="">
-								<div class="box">
+						<li class="work-card">
+							<a class="work-card__link" href="">
+								<div class="work-card__box">
 									<img
 										class="img"
 										src="./images/seafood.jpg"
 										alt="рисунок рыбы с название ресторана морепродуктов"
 										width="370"
 									/>
-									<p class="overlay text-overlay">
+									<p class="work-card__overlay">
 										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
 										посетителю получить исчерпывающие сведения о компании или частном лице.
 									</p>
 								</div>
 								<div class="border">
-									<h2 class="list-titel">
+									<h2 class="work-card__titel">
 										Ресторан
 										<span lang="en">Seafood</span>
 									</h2>
-									<p class="text">Приложение</p>
+									<p class="work-card__text">Приложение</p>
 								</div>
 							</a>
 						</li>
-						<li class="item">
-							<a class="work-link" href="">
-								<div class="box">
+						<li class="work-card">
+							<a class="work-card__link" href="">
+								<div class="work-card__box">
 									<img class="img" src="./images/headphone.jpg" alt="наушники" width="370" />
-									<p class="overlay text-overlay">
+									<p class="work-card__overlay">
 										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
 										посетителю получить исчерпывающие сведения о компании или частном лице.
 									</p>
 								</div>
 								<div class="border">
-									<h2 class="list-titel">
+									<h2 class="work-card__titel">
 										Проект
 										<span lang="en">Prime</span>
 									</h2>
-									<p class="text">Маркетинг</p>
+									<p class="work-card__text">Маркетинг</p>
 								</div>
 							</a>
 						</li>
-						<li class="item">
-							<a class="work-link" href="">
-								<div class="box">
+						<li class="work-card">
+							<a class="work-card__link" href="">
+								<div class="work-card__box">
 									<img class="img" src="./images/boxes.jpg" alt="две подарочные коробки" width="370" />
-									<p class="overlay text-overlay">
+									<p class="work-card__overlay">
 										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
 										посетителю получить исчерпывающие сведения о компании или частном лице.
 									</p>
 								</div>
 								<div class="border">
-									<h2 class="list-titel">
+									<h2 class="work-card__titel">
 										Проект
 										<span lang="en">Boxes</span>
 									</h2>
-									<p class="text">Приложение</p>
+									<p class="work-card__text">Приложение</p>
 								</div>
 							</a>
 						</li>
-						<li class="item">
-							<a class="work-link" href="">
-								<div class="box">
+						<li class="work-card">
+							<a class="work-card__link" href="">
+								<div class="work-card__box">
 									<img class="img" src="./images/display.jpg" alt="дисплей с интерфейсом программы" width="370" />
-									<p class="overlay text-overlay">
+									<p class="work-card__overlay">
 										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
 										посетителю получить исчерпывающие сведения о компании или частном лице.
 									</p>
 								</div>
 								<div class="border">
-									<h2 class="list-titel"><span lang="en">Inspiration has no Borders</span></h2>
-									<p class="text">Веб-сайт</p>
+									<h2 class="work-card__titel"><span lang="en">Inspiration has no Borders</span></h2>
+									<p class="work-card__text">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
-						<li class="item">
-							<a class="work-link" href="">
-								<div class="box">
+						<li class="work-card">
+							<a class="work-card__link" href="">
+								<div class="work-card__box">
 									<img class="img" src="./images/magazine.jpg" alt="открытый журнал с фото и заголовками" width="370" />
-									<p class="overlay text-overlay">
+									<p class="work-card__overlay">
 										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
 										посетителю получить исчерпывающие сведения о компании или частном лице.
 									</p>
 								</div>
 								<div class="border">
-									<h2 class="list-titel">
+									<h2 class="work-card__titel">
 										Издание
 										<span lang="en">Limited Edition</span>
 									</h2>
-									<p class="text">Дизайн</p>
+									<p class="work-card__text">Дизайн</p>
 								</div>
 							</a>
 						</li>
-						<li class="item">
-							<a class="work-link" href="">
-								<div class="box">
+						<li class="work-card">
+							<a class="work-card__link" href="">
+								<div class="work-card__box">
 									<img class="img" src="./images/tag.jpg" alt="бирка с надписью" width="370" />
-									<p class="overlay text-overlay">
+									<p class="work-card__overlay">
 										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
 										посетителю получить исчерпывающие сведения о компании или частном лице.
 									</p>
 								</div>
 								<div class="border">
-									<h2 class="list-titel">
+									<h2 class="work-card__titel">
 										Проект
 										<span>LAB</span>
 									</h2>
-									<p class="text">Маркетинг</p>
+									<p class="work-card__text">Маркетинг</p>
 								</div>
 							</a>
 						</li>
-						<li class="item">
-							<a class="work-link" href="">
-								<div class="box">
+						<li class="work-card">
+							<a class="work-card__link" href="">
+								<div class="work-card__box">
 									<img
 										class="img"
 										src="./images/growinglaptop.jpg"
 										alt="ноутбук с изображением рекламы компании на экране"
 										width="370"
 									/>
-									<p class="overlay text-overlay">
+									<p class="work-card__overlay">
 										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
 										посетителю получить исчерпывающие сведения о компании или частном лице.
 									</p>
 								</div>
 								<div class="border">
-									<h2 class="list-titel"><span>Growing Business</span></h2>
-									<p class="text">Приложение</p>
+									<h2 class="work-card__titel"><span>Growing Business</span></h2>
+									<p class="work-card__text">Приложение</p>
 								</div>
 							</a>
 						</li>
