--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 								<span class="underline">Условия договора</span></a>
 						</label>
 					</div>
-					<button class="modal-button" type="submit">Отправить</button>
+					<button class="button modal__button" type="submit">Отправить</button>
 				</form>
 			</div>
 		</div>
