--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 					<div class="footer__form">
 						<p class="footer__titel">Подпишитесь на рассылку</p>
 						<form class="form" name="mailing-form" autocomplete="on">
-							<label for="mailing-label" class="visually-hidden">Подпишитесь на рассылку</label>
+							<label for="mailing-form" class="visually-hidden">Подпишитесь на рассылку</label>
 							<input class="form__input" type="email" name="email" placeholder="E-mail" id="mailing-form" />
 							<button class="button form__button" type="submit">
 								Подписаться
