--- a/portfolio.html
+++ b/portfolio.html
@@ -274,7 +274,7 @@
 							<li class="social-list__item">
 								<a class="social-link social-link--bcg" href="https://www.instagram.com/" target="_blank"
 									rel="noreferrer noopener">
-									<svg class="social-link__icon" width="20" height="20">
+									<svg class="social-link__icon social-link__icon--white" width="20" height="20">
 										<use href="./images/icons.svg#instagram"></use>
 									</svg>
 								</a>
@@ -282,7 +282,7 @@
 							<li class="social-list__item">
 								<a class="social-link social-link--bcg" href="https://twitter.com/" target="_blank"
 									rel="noreferrer noopener">
-									<svg class="social-link__icon" width="20" height="20">
+									<svg class="social-link__icon social-link__icon--white" width="20" height="20">
 										<use href="./images/icons.svg#twitter"></use>
 									</svg>
 								</a>
@@ -290,7 +290,7 @@
 							<li class="social-list__item">
 								<a class="social-link social-link--bcg" href="https://www.facebook.com/" target="_blank"
 									rel="noreferrer noopener">
-									<svg class="social-link__icon" width="20" height="20">
+									<svg class="social-link__icon social-link__icon--white" width="20" height="20">
 										<use href="./images/icons.svg#facebook"></use>
 									</svg>
 								</a>
@@ -298,7 +298,7 @@
 							<li class="social-list__item">
 								<a class="social-link social-link--bcg" href="https://www.linkedin.com/" target="_blank"
 									rel="noreferrer noopener">
-									<svg class="social-link__icon" width="20" height="20">
+									<svg class="social-link__icon social-link__icon--white" width="20" height="20">
 										<use href="./images/icons.svg#linkedin"></use>
 									</svg>
 								</a>
