--- a/index.html
+++ b/index.html
@@ -369,28 +369,28 @@
 						<ul class="social-list">
 							<li class="social-list__item">
 								<a class="social-link social-link--bcg" href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-link__icon" width="20" height="20">
+									<svg class="social-link__icon social-link__icon--white" width="20" height="20">
 										<use href="./images/icons.svg#instagram"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="social-list__item">
 								<a class="social-link social-link--bcg" href="https://twitter.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-link__icon" width="20" height="20">
+									<svg class="social-link__icon social-link__icon--white" width="20" height="20">
 										<use href="./images/icons.svg#twitter"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="social-list__item">
 								<a class="social-link social-link--bcg" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-link__icon" width="20" height="20">
+									<svg class="social-link__icon social-link__icon--white" width="20" height="20">
 										<use href="./images/icons.svg#facebook"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="social-list__item">
 								<a class="social-link social-link--bcg" href="https://www.linkedin.com/" target="_blank" rel="noreferrer noopener">
-									<svg class="social-link__icon" width="20" height="20">
+									<svg class="social-link__icon social-link__icon--white" width="20" height="20">
 										<use href="./images/icons.svg#linkedin"></use>
 									</svg>
 								</a>
